gcc/testsuite/rust/rustc/ui/parser/multibyte-char-use-seperator-issue-80134.rs
// Regression test for #80134.

fn main() {
    (()é);
// { dg-error ".E0425." "" { target *-*-* } .-1 }
// { dg-error ".E0425." "" { target *-*-* } .-2 }
    (()氷);
// { dg-error ".E0425." "" { target *-*-* } .-1 }
// { dg-error ".E0425." "" { target *-*-* } .-2 }
}

